Tue Feb 19 13:05:00 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Fix scripts/udev/nut-usbups.rules.in to include Powerware 5115 9120 and
   all the powerware using the PHOENIXTEC interface.

Fri Feb 15 15:29:08 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration):
   - fix the reporting of the battery technology,
   - fix the reporting of levels by adding a warning and a critical level,
   - report battery granularity,
   - only report the charging status if the battery charge is below 100 %,
   - report the current battery computed state (capacity_state),
   - report battery.alarm.{design,unit}

Thu Feb 14 08:47:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - man/megatec_usb.8, man/upscode2.8, man/bcmxcp.8, man/bcmxcp_usb.8,
   man/solis.8, man/rhino.8: fix various errors (backport from the trunk r1304)

Wed Feb 13 19:47:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: output signal overrides must be handled
   in upsdrv_initups(), since we might go straight to upsdrv_shutdown()
   afterwards.

Wed Feb 13 02:10:27 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/bestfcom.c: Patch from Chris Adams to accept output from older
   Ferrups models.

Fri Feb  8 19:56:23 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: flush buffers before ser_send_*/ser_get_* to avoid a
   possible loss of synchronization if the buffer happens to have garbage.
 - drivers/megatec_usb.c: dummy ser_flush_io function to please megatec.

Fri Feb  8 07:08:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c,include/common.h: cleanup and change the arguments
   to the upsdebug_hex() function so that it no longer requires casting
   to an unsigned char.

Mon Feb  4 08:33:02 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: list Nitram Elite 2005 with "powerpanel or nitram or